# adversarial2dEnvAI

./: .flake8  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  README.md  changes.diff  changes_for_review.diff  cliff.toml  code_for_review.txt  code_review_request.txt  colab_gui_original.py  env_diff.patch  environment.yml  final_changes.diff  gui_diff.patch  mkdocs.yml  pyproject.toml  requirements.txt  update_colab_gui.py  update_env.py  update_interface.py  update_renderer.py  update_renderer_fix.py  verify_visuals.py
.github/workflows/: docs.yml  link-check.yml  lint.yml  tests.yml  version.yml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/agents/: index.html
dev/api/core/: index.html
dev/architecture/: index.html
dev/assets/: metrics.json
dev/configuration/: index.html
dev/development/: index.html
dev/development/changelog/: index.html
dev/development/docstring-guide/: index.html
dev/development/style-guide/: index.html
dev/development/versioning/: index.html
dev/en/: index.html
dev/en/architecture/: index.html
dev/en/metrics/: index.html
dev/getting-started/: index.html
dev/installation/: index.html
dev/metrics/: index.html
dev/search/: search_index.json
dev/troubleshooting/: index.html
docs/: api.md  environment.md  observations.md
docs/de/: configuration.md  getting-started.md  index.md  installation.md  metrics.md  troubleshooting.md
docs/en/: configuration.md  getting-started.md  index.md  installation.md  metrics.md  troubleshooting.md
notebooks/: Adversarial_Search_Demo.ipynb  CNN_Training.ipynb  Colab_GUI_Demo.ipynb  Environment_Demo.ipynb  Particle_Filter_Demo.ipynb  Q_Learning.ipynb  Value_Iteration.ipynb
src/custom_grid_env/: __init__.py  colab_gui.py  env.py  interface.py  logger.py  particle_filter.py  planner.py  renderer.py  sensors.py
tests/integration/: test_interface.py
tests/unit/: test_adversarial_agents.py  test_agents.py  test_env.py  test_env_dynamic.py  test_particle_filter.py  test_planner.py  test_planner_cleaning.py  test_q_learning_agent.py  test_sensors.py  test_value_iteration_agent.py
(+82 files in other folders)
