[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_grid_env"
version = "0.5.3"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A custom grid environment with an agent and a ghost"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gymnasium",
    "numpy",
    "pygame",
    "tensorflow",
    "matplotlib",
    "scikit-learn",
    "llm_client @ git+https://github.com/dgaida/llm_client.git",
]

[project.optional-dependencies]
colab = [
    "ipywidgets",
    "IPython",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "interrogate",
    "git-cliff",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-static-i18n",
    "mkdocs-mermaid2-plugin",
    "mike",
]

[project.urls]
"Homepage" = "https://github.com/dgaida/adversarial2dEnvAI"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"custom_grid_env.cnn_tutorial" = ["*.keras"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = true
fail-under = 95
verbose = 1
